@@ -1,5 +1,7 @@
 Changes in Bitbake 1.9.x:
 	- Add PE (Package Epoch) support from Philipp Zabel (pH5)
+	- Treat python functions the same as shell functions for logging
+	- Use TMPDIR/anonfunc as a __anonfunc temp directory (T)
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
